[package]
name = "wigner-3nj-symbols"
description = "A crate to calculate Wigner 3nj-symbols"
version = "0.1.0"
authors = ["dshin"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = "0.2.1"

[dev-dependencies]
rstest = "0.10.0"
